--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react",
   "version": "1.0.0",
-  "description": "",
+  "description": "react公共方法",
   "module": "index.ts",
   "dependencies": {
-    "shared": "workspace: *"
+    "share": "workspace: *"
   },
   "keywords": [],
   "author": "",
