--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --ext .ts,.js,.jsx,.tsx --fix --quiet ./packages",
-    "build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/dev.config.js"
+    "build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/dev.config.js",
+    "demo": "vite serve demo/test-func --config scripts/vite/vite.config.js --force"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,13 @@
     "rollup": "^3.27.1",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-typescript2": "^0.35.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@types/react": "^18.0.24",
+		"@types/react-dom": "^18.0.8",
+		"@vitejs/plugin-react": "^2.2.0",
+		"vite": "^3.2.3"
+  },
+  "dependencies": {
+    "@rollup/plugin-replace": "^5.0.1"
   }
 }
